# houseparty

./: AGENTS.md  LICENSE  README.md  pyproject.toml
skills/houseparty/: SKILL.md
src/houseparty/: __init__.py  cli.py  config.py  nts.py  sonos.py  spotify.py
tests/: test_cli.py  test_nts.py  test_sonos.py  test_spotify.py
