[project]
name = "houseparty"
version = "0.2.7"
description = "Stream NTS Radio and Spotify to Sonos speakers"
readme = "README.md"
authors = [
    { name = "Devon Tivona", email = "devon@tivona.me" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "soco>=0.31.1",
    "spotipy>=2.26.0",
    "tomli>=2.0 ; python_full_version < '3.11'",
    "tomli-w>=1.2.0",
    "typer>=0.26.8",
]

[project.scripts]
houseparty = "houseparty.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
